--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,20 @@
     package="com.gdgvitvellore.devfest.gdgdevfest">
 
     <application
-        android:name="com.gdgvitvellore.devfest.AppController"
+        android:name="com.gdgvitvellore.devfest.Boundary.Handlers.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
+        <activity android:name="com.gdgvitvellore.devfest.Entity.Onboarding.Activities.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
