--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,18 +21,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-
     /*Support Libraries*/
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:support-v4:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
-    compile 'com.android.support:recyclerview-v7:24.1.1'
+    //compile 'com.android.support:recyclerview-v7:24.1.1'
 
     /*Networking and Parsing Libs*/
     compile 'com.mcxiaoke.volley:library:1.0.19'
@@ -43,5 +42,6 @@ dependencies {
 
     /*UI Libraries*/
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.bignerdranch.android:expandablerecyclerview:2.1.1'
 
 }
