--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity android:name="com.gdgvitvellore.devfest.Entity.About.Activities.AboutActivity"
             android:exported="true"/>
 
+        <activity android:name="com.gdgvitvellore.devfest.Entity.Main.Activities.MainActivity"
+            android:exported="true"></activity>
+
     </application>
 
 </manifest>
