--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name="com.gdgvitvellore.devfest.Entity.Onboarding.Activities.SplashActivity">
+        <activity android:name="com.gdgvitvellore.devfest.Entity.Onboarding.Activities.OnboardingActivity">
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>-->
         </activity>
 
-        <activity android:name="com.gdgvitvellore.devfest.Entity.Onboarding.Activities.TestSplashActivity">
+        <activity android:name="com.gdgvitvellore.devfest.Entity.Splash.Activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
