faq basic layout done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,9 @@ apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    buildToolsVersion "24.0.0"
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.gdgvitvellore.devfest.gdgdevfest"
         minSdkVersion 18
         targetSdkVersion 24
