--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,22 @@
         </activity>
 
         <activity android:name="com.gdgvitvellore.devfest.Entity.Onboarding.Activities.TestSplashActivity">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
 
 
         <activity android:name="com.gdgvitvellore.devfest.Entity.Main.Activities.MainActivity"
             android:exported="true"></activity>
+
+        <activity android:name="com.gdgvitvellore.devfest.Entity.FAQ.ActivityFAQMain">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
