--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity android:name="com.gdgvitvellore.devfest.Entity.Main.Activities.MainActivity"
             android:exported="true"></activity>
 
+        <activity android:name="com.gdgvitvellore.devfest.Entity.Authentication.Activities.AuthenticationActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
