Completed login added qrcode in coupons

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,8 @@ dependencies {
 
     /*SwipeStack Library for coupons*/
     compile 'link.fls:swipestack:0.3.0'
+    compile 'com.google.zxing:core:3.2.1'
+    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+
 
 }
