--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,5 @@ dependencies {
     compile 'link.fls:swipestack:0.3.0'
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
-
-
-
+    compile 'com.github.bumptech.glide:glide:3.6.0'
 }
