--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,5 @@ dependencies {
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     compile 'com.github.bumptech.glide:glide:3.6.0'
-    compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.1'
+    //compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.1'
 }
