--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
         <activity android:name="com.gdgvitvellore.devfest.Entity.Main.Activities.MainActivity"
             android:exported="true"
-            android:configChanges="keyboardHidden|orientation|screenSize"></activity>
+            android:screenOrientation="portrait"></activity>
 
         <activity android:name="com.gdgvitvellore.devfest.Entity.Authentication.Activities.AuthenticationActivity"
             android:exported="true"
