--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.caverock:androidsvg:1.2.1'
     compile 'com.google.android.gms:play-services-auth:9.6.1'
-    //compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.1'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
